[tool.poetry]
name = "oit-bus"
version = "0.1.0"
description = ""
authors = ["skip"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
pipenv = "^2022.6.7"
install = "^1.3.5"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.961"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
